# resume-jd-matcher

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml
configs/model/: bi_encoder.yaml  cross_encoder.yaml
data/processed/: eval_results.md  eval_set.json  jobs.json  resumes.json
docs/: architecture.md  data_card.md  model_card.md
docs/decisions/: 001-embedding-choice.md  002-two-stage-retrieval.md  003-no-finetuning-yet.md
notebooks/: 01_eda.ipynb  02_embedding_experiments.ipynb  03_error_analysis.ipynb
scripts/: build_index.sh  run_eval.sh  seed_data.py
src/matcher/api/: deps.py  main.py  routes.py
src/matcher/data/: ingest.py  parse.py  schema.py
src/matcher/eval/: eval_runner.py  metrics.py
src/matcher/features/: chunking.py  skill_extract.py
src/matcher/models/: bi_encoder.py  cross_encoder.py  rerank.py  tfidf_baseline.py
src/matcher/pipeline/: index.py  score.py  train.py
src/matcher/ui/: app.py
src/matcher/utils/: io.py  logging.py
tests/: test_api.py  test_eval_runner.py  test_metrics.py  test_parse.py  test_tfidf.py
tests/fixtures/: sample_jd.txt  sample_resume.txt
